--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <span id="logo"><img src="Gemini_Generated_Image_b2max8b2max8b2ma-removebg-preview.png"></span>
+    <span id="logo"><img src="logo.png"></span>
     <div class="div1">
         <div id="div2">
             <h2 style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">Best of a kind</h2>
