--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="UTF-8">
     <title>𝒦𝐻 𝐵𝓊𝒾𝓁𝒹𝓈</title>
     <link rel="script" href="script.js">
     <link rel="stylesheet" href="styles.css">
@@ -9,9 +10,10 @@
     <div class="div1">
         <div id="div2">
             <h2 style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">Best of a kind</h2>
-            <p><p1 style="font-size:x-small">(Recommended)</p1><br>🔥<span id="link_IGV21">Ignis Glacialis V2.1 (Sub Procella)</span>🧊</p>
-            🧊<span id="link_IGV10">Ignis Glacialis V1.0</span>🔥
-        </div>
+            <p1 style="position: relative;font-size:x-small; color: white;z-index: 10;">(Recommended)</p1><br><span class="link">🔥<span id="link_IGV21">Ignis Glacialis V2.1 (Sub Procella)</span>🧊</span>
+            <br><br><br>
+            <p><span class="link">🧊<span id="link_IGV10">Ignis Glacialis V1.0</span>🔥</span></p>
+        </div> 
     </div>
-    <script src="script.js"></script>
+    <script src="script.js"></script> 
 </body>
