--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
 <body>
     <span id="logo"><img src="logo.png"></span>
     <div class="div1">
-        <div id="div2">
-            <h2 style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">Best of a kind</h2>
+        <div id="div2" style="left: 0%;">
+            <h2 id="bpve">Best PVE</h2>
+            <p1 style="position: relative;font-size:x-small; color: white;z-index: 10;">(Recommended)</p1><br><span class="link">🔥<span id="link_IGV21">Ignis Glacialis V2.1 (Sub Procella)</span>🧊</span>
+            <br><br><br>
+            <p><span class="link">🧊<span id="link_IGV10">Ignis Glacialis V1.0</span>🔥</span></p>
+        </div> 
+    </div>
+    <div class="div1">
+        <div id="div2" style="right: 0%;">
+            <h2 id="bpve">Best PVP</h2>
             <p1 style="position: relative;font-size:x-small; color: white;z-index: 10;">(Recommended)</p1><br><span class="link">🔥<span id="link_IGV21">Ignis Glacialis V2.1 (Sub Procella)</span>🧊</span>
             <br><br><br>
             <p><span class="link">🧊<span id="link_IGV10">Ignis Glacialis V1.0</span>🔥</span></p>
