--- a/index.html
+++ b/index.html
@@ -7,21 +7,25 @@
 </head>
 <body>
     <span id="logo"><img src="logo.png"></span>
+    <div style="display:flex;justify-content: center;">
     <div class="div1">
         <div id="div2" style="left: 0%;">
             <h2 id="bpve">Best PVE</h2>
             <p1 style="position: relative;font-size:x-small; color: white;z-index: 10;">(Recommended)</p1><br><span class="link">🔥<span id="link_IGV21">Ignis Glacialis V2.1 (Sub Procella)</span>🧊</span>
             <br><br><br>
             <p><span class="link">🧊<span id="link_IGV10">Ignis Glacialis V1.0</span>🔥</span></p>
-        </div> 
-    </div>
-    <div class="div1">
+        </div>
         <div id="div2" style="right: 0%;">
             <h2 id="bpve">Best PVP</h2>
             <p1 style="position: relative;font-size:x-small; color: white;z-index: 10;">(Recommended)</p1><br><span class="link">🔥<span id="link_IGV21">Ignis Glacialis V2.1 (Sub Procella)</span>🧊</span>
             <br><br><br>
             <p><span class="link">🧊<span id="link_IGV10">Ignis Glacialis V1.0</span>🔥</span></p>
+        </div>
+        <div id="div2" style="margin:auto;position: relative; height: 50%;bottom: 25%;">
+            <h2 id="bpve">Join my Discord Server (BR)</h2>
+            <div style="display: flex;justify-content: center;"><img src="discord_logo.png" alt="discord-logo" style="position:absolute; max-width: 100%; height: auto; width: 20%;left: 18%;top: 39.7%;"> <span id="discord">Discord</span></div>
         </div> 
+    </div>
     </div>
     <script src="script.js"></script> 
 </body>
