--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div id="div2" style="margin:auto;position: relative; height: 50%;bottom: 25%;">
             <h2 id="bpve">Join my Discord Server (BR)</h2>
-            <div style="display: flex;justify-content: center;"><img src="discord_logo.png" alt="discord-logo" style="position:absolute; max-width: 100%; height: auto; width: 20%;left: 18%;top: 39.7%;"> <span id="discord">Discord</span></div>
+            <div style="display: flex;justify-content: center;"><a href="https://discord.gg/zzC88pmnP"><img src="discord_logo.png" alt="discord-logo" style="position:relative; max-width: 100%; height: auto; width: 75%;bottom:25%;margin:auto"></a></div>
         </div> 
     </div>
     </div>
