--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <p1 style="position: relative;font-size:x-small; color: white;z-index: 10;">(Recommended)</p1><br><span class="link">🔥<span id="link_IGV21">Ignis Glacialis V2.1 (Sub Procella)</span>🧊</span>
             <br><br><br>
             <p><span class="link">🧊<span id="link_IGV10">Ignis Glacialis V1.0</span>🔥</span></p>
+            <br>
+            <p><span class="link">⚔️<span id="link_SLV10">Silent Soul V1.0</span>👻</span></p>
+            <br>
+            <!-- <p><span class="link"><span id="link_..."></span></p> -->
         </div>
         <div id="div2" style="right: 0%;">
             <h2 id="bpve">Best PVP</h2>
