--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <br><br><br>
             <p><span class="link">🧊<span id="link_IGV10">Ignis Glacialis V1.0</span>🔥</span></p>
             <br>
-            <p><span class="link">⚔️<span id="link_SLV10">Silent Soul V1.0</span>👻</span></p>
+            <p1 style="position: relative;font-size:x-small; color: white;z-index: 10;">(Sr Renier Collab)</p1><br><span class="link">⚔️<span id="link_SLV10">Silent Soul V1.0</span>👻</span>
             <br>
             <!-- <p><span class="link"><span id="link_..."></span></p> -->
         </div>
