--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
             <h2 id="bpve">Best PVE</h2>
             <p1 style="position: relative;font-size:x-small; color: white;z-index: 10;">(Recommended)</p1><br><span class="link">🔥<span id="link_IGV21">Ignis Glacialis V2.1 (Sub Procella)</span>🧊</span>
             <br><br><br>
-            <p><span class="link">🧊<span id="link_IGV10">Ignis Glacialis V1.0</span>🔥</span></p>
+            <p><span class="link">🧊<span id="link_IGV20">Ignis Glacialis V2.0</span>🔥</span></p>
             <br>
-            <p1 style="position: relative;font-size:x-small; color: white;z-index: 10;">(Sr Renier Collab)</p1><br><span class="link">⚔️<span id="link_SLV10">Silent Soul V1.0</span>👻</span>
+            <p><span class="link">🔥<span id="link_IGV10">Ignis Glacialis V1.0</span>🧊</span></p>
+            <br>
+            <p1 style="position: relative;font-size:x-small; color: white;z-index: 10;">(Sr Renier Collab)</p1><br><span class="link">⚔️<span id="link_SSV10">Silent Soul V1.0</span>👻</span>
             <br>
             <!-- <p><span class="link"><span id="link_..."></span></p> -->
         </div>
