--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <p><span class="link">🔥<span id="link_IGV10">Ignis Glacialis V1.0</span>🧊</span></p>
             <br>
             <p1 style="position: relative;font-size:x-small; color: white;z-index: 10;">(Sr Renier Collab)</p1><br><span class="link">⚔️<span id="link_SSV10">Silent Soul V1.0</span>👻</span>
-            <br>
-            <!-- <p><span class="link"><span id="link_..."></span></p> -->
+            <br><br><br>
+            <p1 style="position: relative;font-size:x-small; color: white;z-index: 10;">(Sr Renier Collab)</p1><br><span class="link">🧊<span id="link_CVV10">CryoVortex V1.0</span>🌀</span>
         </div>
         <div id="div2" style="right: 0%;">
             <h2 id="bpve">Best PVP</h2>
@@ -29,7 +29,7 @@
         </div>
         <div id="div2" style="margin:auto;position: relative; height: 50%;bottom: 25%;">
             <h2 id="bpve">Join my Discord Server (BR)</h2>
-            <div style="display: flex;justify-content: center;"><a href="https://discord.gg/zzC88pmnP"><img src="discord_logo.png" alt="discord-logo" style="position:relative; max-width: 100%; height: auto; width: 75%;bottom:25%;margin:auto"></a></div>
+            <div style="display: flex;justify-content: center;"><a href="https://discord.gg/zzC88pmnP" style="width: fit-content; height: fit-content;"><img src="discord_logo.png" alt="discord-logo" style="position:relative; max-width: 100%; height: auto; width: 50%;bottom:35%;margin:auto"></a></div>
         </div> 
     </div>
     </div>
