--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div id="div2" style="margin:auto;position: relative; height: 50%;bottom: 25%;">
             <h2 id="bpve">Join my Discord Server (BR)</h2>
-            <div style="display: flex;justify-content: center;"><a href="https://discord.gg/zzC88pmnP" style="width: fit-content; height: fit-content;"><img src="discord_logo.png" alt="discord-logo" style="position:relative; max-width: 100%; height: auto; width: 50%;bottom:35%;margin:auto"></a></div>
+            <div style="display: flex;justify-content: center;"><a href="https://discord.gg/zzC88pmnP" style="width: fit-content; height: fit-content;"><img src="discord_logo.png" alt="discord-logo" style="position:absolute; max-width: 100%; height: auto; width: 75%;top:30%;right:12.5%;margin:auto"></a></div>
         </div> 
     </div>
     </div>
