--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <div class="div1">
         <div id="div2" style="left: 0%;">
             <h2 id="bpve">Best PVE</h2>
-            <p1 style="position: relative;font-size:x-small; color: white;z-index: 10;">(Recommended)</p1><br><span class="link">🔥<span id="link_IGV21">Ignis Glacialis V2.1 (Sub Procella)</span>🧊</span>
+            <section class="links-section"><span id="mini-texto">(Recommended)</span><br><span class="link">🔥<span id="link_IGV21">Ignis Glacialis V2.1 (Sub Procella)</span>🧊</span></section>
             <br><br><br>
-            <p><span class="link">🧊<span id="link_IGV20">Ignis Glacialis V2.0</span>🔥</span></p>
-            <br>
-            <p><span class="link">🔥<span id="link_IGV10">Ignis Glacialis V1.0</span>🧊</span></p>
-            <br>
-            <p1 style="position: relative;font-size:x-small; color: white;z-index: 10;">(Sr Renier Collab)</p1><br><span class="link">⚔️<span id="link_SSV10">Silent Soul V1.0</span>👻</span>
+            <section class="links-section"><span class="link">🧊<span id="link_IGV20">Ignis Glacialis V2.0</span>🔥</span></section>
             <br><br><br>
-            <p1 style="position: relative;font-size:x-small; color: white;z-index: 10;">(Sr Renier Collab)</p1><br><span class="link">🧊<span id="link_CVV10">CryoVortex V1.0</span>🌀</span>
+            <section class="links-section"><span class="link">🔥<span id="link_IGV10">Ignis Glacialis V1.0</span>🧊</span></section>
+            <br><br>
+            <section class="links-section"><span id="mini-texto">(Sr Renier Collab)</span><br><span class="link">⚔️<span id="link_SSV10">Silent Soul V1.0</span>👻</span></section>
+            <br><br>
+            <section class="links-section"><span id="mini-texto">(Sr Renier Collab)</span><br><span class="link">🧊<span id="link_CVV10">CryoVortex V1.0</span>🌀</span></section>
         </div>
         <div id="div2" style="right: 0%;">
             <h2 id="bpve">Best PVP</h2>
