--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>𝒦𝐻 𝐵𝓊𝒾𝓁𝒹𝓈</title>
     <link rel="script" href="script.js">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="deepwoken_logo.jpg">
 </head>
 <body>
     <span id="logo"><img src="logo.png"></span>
