--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <section class="links-section"><span id="mini-texto">(Sr Renier Collab)</span><br><span class="link">⚔️<span id="link_SSV10">Silent Soul V1.0</span>👻</span></section>
             <br><br>
             <section class="links-section"><span id="mini-texto">(Sr Renier Collab)</span><br><span class="link">🧊<span id="link_CVV10">CryoVortex V1.0</span>🌀</span></section>
+            <br><br>
+            <section class="links-section"><span id="mini-texto">(Sr Renier Collab)</span><br><span class="link">🔥<span id="link_WKV10">Wandering Knight V1.0</span>🚶‍♂️</span></section>
         </div>
         <div id="div2" style="right: 0%;">
             <h2 id="bpve">Best PVP</h2>
