--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <link rel="script" href="script.js">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="deepwoken_logo.jpg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <span id="logo"><img src="logo.png"></span>
+    <span id="logo"><img src="logo.png" style="max-width: 100%; height: auto; width: 35%;margin:auto"></span>
     <div style="display:flex;justify-content: center;">
     <div class="div1">
         <div id="div2" style="left: 0%;">
